# dotfiles

./: README.md
ansible/: README.md  main.yml  pyproject.toml
ansible/group_vars/: all
ansible/roles/js/tasks/: main.yml
ansible/roles/misc/defaults/: main.yml
ansible/roles/misc/handlers/: main.yml
ansible/roles/misc/tasks/: main.yml
ansible/roles/misc/tests/: test.yml
ansible/roles/misc/vars/: main.yml
ansible/roles/nvim/defaults/: main.yml
ansible/roles/nvim/tasks/: main.yml
config/nvim/lua/user/: init.lua
