[tool.poetry]
name = "dotfiles-ansible"
version = "0.1.0"
description = ""
authors = ["evgenia <klncvch@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
argcomplete = "^2.0.0"
ansible = "^6.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
